--- a/Lab2Layout/MainPage.xaml
+++ b/Lab2Layout/MainPage.xaml
@@ -8,6 +8,10 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 <!--Auto zal de ruimte in nemen van het grooste kind element-->
+    <StackPanel>
+        <Button Content="navigeer naar p2 " Click="Button_Click"></Button>
+    </StackPanel>
+    <!--
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100"/>
@@ -25,6 +29,12 @@
                 Grid.Row="2"
                 Grid.Column="2"
                 VerticalAlignment="Center"/>
+        <CheckBox >
+            <Button>
+                button of checkbox
+                 <MediaElement  Source=""/> 
+            </Button>
+        </CheckBox>
         <ListView Grid.Column="1" Grid.Row="2">
             <ListViewItem>
                 <TextBlock Text="item 1"/>
@@ -37,4 +47,5 @@
             </ListViewItem>
         </ListView>
     </Grid>
+    -->
 </Page>
